--- a/package.json
+++ b/package.json
@@ -59,8 +59,7 @@
     "styled-components": "^6.0.1",
     "swr": "^2.2.5",
     "typechain": "^8.3.2",
-    "viem": "2.x",
-    "wagmi": "^2.14.16"
+    "viem": "2.x"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.196",
